[ticket/624] Fix lack of scrollbar in quick edit form.
CUSTDB-624

--- a/styles/prosilver/theme/common.css
+++ b/styles/prosilver/theme/common.css
@@ -867,6 +867,10 @@ textarea.elastic {
 	max-height: 400px;
 }
 
+textarea.quickedit {
+	font-size: 1.1em;
+}
+
 .text-content {
 	white-space: pre-wrap;
 }
